--- a/src/notes/2022-11-25.md
+++ b/src/notes/2022-11-25.md
@@ -48,3 +48,35 @@ module.exports = {
 
 
 ```
+
+
+## 配置部分操作按钮为中文
+
+```js
+themeConfig: {
+  // 默认 On this page
+  outlineTitle: '本页目录',
+
+  // 文档底部按钮 默认为英文
+  docFooter: {
+    prev: '前一篇',
+    next: '下一篇'
+  },
+}
+```
+
+
+## 页面添加最后更新时间
+
+```js
+module.exports = {
+  // 显示最后更新时间
+  lastUpdated: true,
+
+  themeConfig: {
+      // 最后更新时间前文字
+      lastUpdatedText: '最后更新时间',
+  }
+}
+
+```
