--- a/src/notes/2022-11-25.md
+++ b/src/notes/2022-11-25.md
@@ -79,3 +79,13 @@ module.exports = {
   }
 }
 ```
+
+## 图标(Emoji)
+
+```
+:tada: :100: :ghost:
+```
+:tada: :100: :ghost:
+
+[全部表情列表](https://github.com/markdown-it/markdown-it-emoji/blob/master/lib/data/full.json)
+
