--- a/src/notes/2022-11-25.md
+++ b/src/notes/2022-11-25.md
@@ -89,3 +89,33 @@ module.exports = {
 
 [全部表情列表](https://github.com/markdown-it/markdown-it-emoji/blob/master/lib/data/full.json)
 
+## Markdown 主题样式
+
+[全部主题列表](https://github.com/shikijs/shiki/blob/main/docs/themes.md#all-themes)
+```js
+export default {
+  markdown: {
+    theme: 'material-palenight',
+    // 是否显示行数
+    lineNumbers: true
+  }
+}
+```
+
+## 可以在`Markdown`中直接使用`VUE`语法
+
+[官方描述](https://vitepress.vuejs.org/guide/using-vue#using-vue-in-markdown)
+
+::: info 以下机翻
+在 VitePress 中，每个标记文件都被编译成 HTML，然后作为 Vue 单文件组件处理。这意味着您可以通过添加 < script > 标记来使用标记内的任何 Vue 特性，包括动态模板、使用 Vue 组件或任意页内 Vue 组件逻辑。
+
+了解 VitePress 利用 Vue 3的编译器自动检测和优化降价的纯静态部分也很重要。静态内容被优化为单个占位符节点，并从页面的 JavaScript 有效负载中消除。在客户端水化过程中也跳过了这些步骤。简而言之，您只需为任何给定页面上的动态部分付费。
+:::
+
+
+```html
+{{ 1 + 1 }}
+<div v-for="i in 3">{{ 'for: ' + i }}</div>
+```
+{{ 1 + 1 }}
+<div v-for="i in 3">{{ 'for: ' + i }}</div>
