--- a/src/notes/2022-12-06.md
+++ b/src/notes/2022-12-06.md
@@ -5,10 +5,10 @@ toIndex() {
   let _that = this
   const href = '/pages/index/index2' 
   uni.navigateTo({
-    url: href + "?rkuid=" + this.rkuid,
+    url: href + "?uid=" + this.uid,
     events: {
       // 为指定事件添加一个监听器，获取被打开页面传送到当前页面的数据
-      reGetFwlist: function() {
+      reGetList: function() {
         _that.getFwList()
       }
     }
@@ -19,7 +19,7 @@ toIndex() {
 被打开的页面调用
 ```js
 const eventChannel = this.getOpenerEventChannel();
-eventChannel.emit('reGetFwlist', {data: ''});
+eventChannel.emit('reGetList', {data: ''});
 ```
 
 
