--- a/src/notes/2023-07-21.md
+++ b/src/notes/2023-07-21.md
@@ -10,14 +10,14 @@
 
 |  字符名称  | sql符号 | 转义字符 |
 | :--------: | :-----: | :------- |
-|   大于号   |    >    | & gt;     |
-|   小于号   |    <    | & lt;     |
-|   不等于   |   <>    | & lt;& gt; |
-| 大于等于号 |   >=    | & gt;=    |
-| 小于等于号 |   <=    | & lt;=    |
-|     与     |    &    | & amp;    |
-|   单引号   |    '    | & apos;   |
-|   双引号   |    "    | & quot;   |
+|   大于号   |    >    | \&gt;     |
+|   小于号   |    <    | \&lt;     |
+|   不等于   |   <>    | \&lt;\&gt; |
+| 大于等于号 |   >=    | \&gt;=    |
+| 小于等于号 |   <=    | \&lt;=    |
+|     与     |    &    | \&amp;    |
+|   单引号   |    '    | \&apos;   |
+|   双引号   |    "    | \&quot;   |
 
 ### 简单代码示例：
 
@@ -29,16 +29,16 @@ select * from user where `age` <= 10
 
 #### xml 语句
 
-```xml
+```sql
 <select id="getUser"  resultType="userInfo">
     select * from user 
-        where `age`  &lt;= #{age}
+        where `age` &lt;= #{age}
 </select>
 ```
 
 ### 写法注意
 
-- 转义字符 之前不能有空格，例如：`& gt;` 或者 `&g t;` 都是错误的
+- 转义字符 之前不能有空格，例如：`&gt;` 或者 `&gt;` 都是错误的
 - 转义字符 必须以`;` 结尾
 - 转义字符 是区分大小写的
 - 单独出现的`&`不会被认为是转义的开始
@@ -46,21 +46,20 @@ select * from user where `age` <= 10
 
 ### 注意【MarkDown】小知识
 
-```
-以上转义符号在 【MarkDown】 中也同样试用会被转义，在【MarkDown】文档中想要保留展示这些转移符号，需要在转义符前面写上一个 '\',例如：\>
-```
+以上转义符号在 【MarkDown】 中也同样试用会被转义，在【MarkDown】文档中想要保留展示这些转移符号，需要在转义符前面写上一个 '\\',例如：\\>
 
-## 方法二：使用 <![CDATA[ 内容 ]]>
 
-在 xml 格式中，当遇到 <![CDATA[ ]]> 这种格式时，会把方块中的内容直接输出，不做任何的解析转义
+## 方法二：使用 \<![CDATA[ 内容 ]]>
+
+在 xml 格式中，当遇到 \<![CDATA[ ]]> 这种格式时，会把方块中的内容直接输出，不做任何的解析转义
 
 |  字符名称  | 字符串符号 | 示例代码         |
 | :--------: | :--------: | :--------------- |
-|   大于号   |     >      | <![CDATA[ > ]]>  |
-|   小于号   |     <      | <![CDATA[ < ]]>  |
-|   不等于   |     <>     | <![CDATA[ <> ]]> |
-| 大于等于号 |     >=     | <![CDATA[ >= ]]> |
-| 小于等于号 |     <=     | <![CDATA[ <= ]]> |
+|   大于号   |     >      | \<![CDATA[ > ]]>  |
+|   小于号   |     <      | \<![CDATA[ < ]]>  |
+|   不等于   |     <>     | \<![CDATA[ <> ]]> |
+| 大于等于号 |     >=     | \<![CDATA[ >= ]]> |
+| 小于等于号 |     <=     | \<![CDATA[ <= ]]> |
 
 ### 简单代码示例：
 
