--- a/src/notes/2023-07-21.md
+++ b/src/notes/2023-07-21.md
@@ -38,9 +38,9 @@ select * from user where `age` <= 10
 
 ### 写法注意
 
-- 转义字符 之前不能有空格，例如：`&gt;` 或者 `&gt;` 都是错误的
-- 转义字符 必须以`;` 结尾
-- 转义字符 是区分大小写的
+- 转义字符之间不能有空格，例如：`& gt;` 或者 `&gt ;` 都是错误的
+- 转义字符必须以`;` 结尾
+- 转义字符是区分大小写的
 - 单独出现的`&`不会被认为是转义的开始
 - 转义字符 中是没有 `=` 所以 大于等于 在写的时候，`=`直接拼接在转义字符结尾的后面
 
@@ -84,11 +84,10 @@ select * from user where `age` <= 10
 
 ### 写法注意
 
-- `<![CDATA[ 内容 ]]>` 中的`内容` 部分，不能再包含 `` ，也不能嵌套使用
-- `` 是一个整体，处理放置内容文本的部分之外，不能出现 `空格` 或者 `换行`
+- `<![CDATA[ 内容 ]]>` 中的`内容` 部分，不能再包含 `<![CDATA[]]>` ，也不能嵌套使用
+- `<![CDATA[]]>` 是一个整体，处理放置内容文本的部分之外，不能出现 `空格` 或者 `换行`
 
 ## 两种方法对比
 
-- `` 比 `转义符` 来的繁琐
-- `` 表示xml解析器忽略解析，相对比速度会比较快
-- 个人比较喜欢使用 `` ，因为我记不住那个转义的意思
+- `<![CDATA[]]>` 比 `转义符` 来的繁琐
+- `<![CDATA[]]>` 表示xml解析器忽略解析，相对比速度会比较快
