修复错误文字

--- a/src/notes/2023-07-31.md
+++ b/src/notes/2023-07-31.md
@@ -7,12 +7,10 @@
 ## 配置 ACCESS_TOKEN
 
 - 账号 => settings => Developer settings =>  personal access tokens => tokens(classic)
-
   => Generate new token 
 
-- 拿到 token后台， 仓库设置 => secrete and veriables => actions  => new repository secret
+- 拿到 token后, 仓库设置 => secrete and veriables => actions  => new repository secret
   = > 添加name为 ACCESS_TOKEN
-
 
 
 ## Actions 配置文件
