--- a/src/java/基于分词组合加密思想的数据库加密字段模糊搜索方案探索.md
+++ b/src/java/基于分词组合加密思想的数据库加密字段模糊搜索方案探索.md
@@ -1,3 +1,4 @@
+# 基于分词组合加密思想的数据库加密字段模糊搜索方案探索
 ## 摘要
 
 当前，主数据库字段的加密搜索技术仍处于探索阶段。现有的主要实现方案包括：对数据库进行全局解密后检索、将数据查询后在内存中解密后再检索，以及分词组合加密（即先对明文进行分词处理，再加密并存储），查询时，通过匹配分词结果来实现搜索功能。然而，这些方法存在明显的局限性：全局解密可能需要消耗大量计算资源和时间，可能导致延迟，影响用户体验。内存解密内存容量有限，无法同时加载和解密大规模数据，攻击者可以通过内存扫描工具（如调试器或恶意软件）直接读取内存中的解密数据，而分词组合加密，为确保搜索体验，需要穷举所有可能的分词组合，这使得存储和检索成本随着字段长度的增加而呈指数级增长。针对这一问题，本文提出了一些优化思路，通过在功能性或安全性方面做出适当调整，从而大幅提升其实用性和可行性。
