--- a/src/java/论微服务框架下的网络安全防护.md
+++ b/src/java/论微服务框架下的网络安全防护.md
@@ -2,7 +2,7 @@
 
 ## 摘要
 
-​		本文以某县域智慧城市项目为背景，针对传统城市治理中存在的部门数据孤岛、事件响应滞后、跨域协同低效等问题，提出基于“网格化+数字化+智能化”的立体安全防护体系。项目将城市划分为县-乡镇（街道）-社区-网格四级管理网格，集成物联网感知设备、视频AI分析算法及政务数据中台，构建“一网统管”智能中枢。在安全防护层面，通过RPC技术实现微服务间通信加密与动态鉴权，采用边缘计算节点实现敏感数据的本地化脱敏处理，并设计多租户RBAC权限模型保障跨部门数据共享安全。平台上线后，实现城市管理事件自动识别准确率提升至92%，跨部门协同处置效率提高60%，重大风险预警响应时间缩短至15分钟内。本文重点论证了微服务项目体系中数据安全流动、系统韧性保障及隐私合规管控的技术路径，为智慧城市数字化治理体系的安全建设提供实践参考。
+​		本文以某县域智慧城市项目为背景，针对传统城市治理中存在的部门数据孤岛、事件响应滞后、跨域协同低效等问题，提出基于“网格化+数字化+智能化”的智慧城市解决方案。项目将城市划分为县-乡镇（街道）-社区-网格四级管理网格，集成物联网感知设备、视频AI分析算法及政务数据中台，构建“一网统管”智能中枢。在安全防护层面，通过RPC技术实现微服务间通信加密与动态鉴权，采用边缘计算节点实现敏感数据的本地化脱敏处理，并设计多租户RBAC权限模型保障跨部门数据共享安全。平台上线后，实现城市管理事件自动识别准确率提升至92%，跨部门协同处置效率提高60%，重大风险预警响应时间缩短至15分钟内。本文重点论证了微服务项目体系中数据安全流动、系统韧性保障及隐私合规管控的技术路径，为智慧城市数字化治理体系的安全建设提供实践参考。
 
 
 
